src/human_study/program_10/python_err_msg.txt
File "./seq2parse/human_study/program_10/original.py", line 3
    print("je m'apelle , "nom" , of course ")
          ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
